# SoNFT

./: Anchor.toml
programs/contract/: Cargo.toml
programs/contract/src/: lib.rs
